# Complete_Artificial_Intelligence_and_Machine_Learning_in_Python

./: 2_matplotlib.py  README.md
1 Linear Regression/: Linear Regression - Multiple Variable.ipynb  Linear Regression - Single Variable.ipynb  area.csv  gradient_descent.py  my_area_price_prediction.csv
1 Tensorflow for Deep Learning/: tensorflow_work.py
10 Random Forest Algorithm/: RandomForest.ipynb
11 K-Mean Clustering/: K Mean clustering.ipynb  customer segmentation using K Means.ipynb  customer_kmeans.pkl
12 PCA (Principal Component Analysis)/: PCA.ipynb
13 DBSCAN Clustering/: DBSCAN Clustering.ipynb
14 Hierarchical Clustering/: Clustering E-Commerce Users And Data Analysis Using Agglomerative Clustering In Scikit-Learn Python.ipynb
15 ANN/: dataset Kaggle link.txt  model.h5
19 Ollama local LLM Model testing/: chatbot.py  postman_test_curl.txt  readme.txt
2 Logistic Regression/: Logistic Regression - Binary Classification.ipynb  Logistic Regression - Multiclass Classification.ipynb
20 Working with Groq/: groq_work.py  work.py
21 Basic OLLAMA RAG Chatbot Streamlit/: readme.txt
22 download huggingface model locally expose api/: 1_download_hf_model.py  2_test_model.py  ReadMe.md  app.py
23 Advanced Rag/01_document_loaders/: main.py  pyproject.toml  requirements.txt
23 Advanced Rag/01_document_loaders/notebooks/: csv_loader.ipynb  json_loader.ipynb  pdf_loader.ipynb  text_loader.ipynb  web_loader.ipynb
23 Advanced Rag/01_document_loaders/notebooks/.ipynb_checkpoints/: pdf_loader-checkpoint.ipynb
23 Advanced Rag/02_text_splitters/: pyproject.toml  requirements.txt
23 Advanced Rag/02_text_splitters/.ipynb_checkpoints/: main-checkpoint.py
23 Advanced Rag/02_text_splitters/notebooks/: character_text_splitters.ipynb  document_text_splitter.ipynb
23 Advanced Rag/02_text_splitters/notebooks/.ipynb_checkpoints/: character_text_splitters-checkpoint.ipynb
23 Advanced Rag/04_vector_stores/: .gitignore  pyproject.toml  requirements.txt
23 Advanced Rag/04_vector_stores/notebooks/: chromadb_crud_operations.ipynb  chromadb_load_existing_db.ipynb  chromadb_pdf_pipeline.ipynb
23 Advanced Rag/05_retrievers/: .gitignore  main.py  pyproject.toml  requirements.txt
23 Advanced Rag/05_retrievers/notebooks/: 01_similarity_search.ipynb  02_similarity_score_threshold.ipynb  03_mmr.ipynb  04_bm25.ipynb  05_hybrid_search.ipynb  06_custom_ensemble_retriever.ipynb
23 Advanced Rag/09_graph_rag/: .gitignore  01_ingestion.ipynb  02_retrieval.ipynb  pyproject.toml  requirements.txt  steps.md
23 Advanced Rag/10_rag_evaluation/: main.py  pyproject.toml  rag_pipeline.py  requirements.txt
23 Advanced Rag/10_rag_evaluation/notebooks/: context_precision.ipynb  context_recall.ipynb  faithfulness.ipynb  noise_sensitivity.ipynb  response_relevancy.ipynb
23 Advanced Rag/11_advanced_retrievers/: .gitignore  main.py  pyproject.toml  requirements.txt
23 Advanced Rag/11_advanced_retrievers/notebooks/: contextual_compression.ipynb  custom_contextual_compression.ipynb  custom_multi_query.ipynb  custom_parent_document_retriever.ipynb  custom_self_query.ipynb  multi_query.ipynb  parent_document_retriever.ipynb  self_query.ipynb
3 Decision Tree/: Decision Tree.ipynb
4 SVM (Support Vector Machine)/: SVM.ipynb
5 Ridge (L2 Regularization) and Lasso (L1 Regularization)/: Ridge and Lasso.ipynb
6 Naive Bayes/: Naive Bayes - Spam Ham Email prediction.ipynb  Naive Bayes.ipynb
8 KNN/: KNN - Iris flower classification.ipynb
9 Ensemble Learning Algorithms/: Ensemble Learning Techniques.ipynb
(+47 files in other folders)
