[project]
name = "rag-document-loaders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.1.0",
    "jq>=1.11.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "lxml>=6.0.2",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "rapidocr-onnxruntime>=1.4.4",
]
